--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -5,13 +5,13 @@
 .i-left{
     flex: 1;
     display: flex;
-    justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .i-left-wrapper{
     padding: 100px;
-    height: 50%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -57,12 +57,44 @@
     font-size: 16px;
 }
 
+.i-button {
+    margin-top: 30px;
+}
+
+.i-button>button{
+    padding: 20px 40px;
+    border-radius: 10px;
+    border: none;
+    background-color: #8a2be2;
+    color: white;
+    cursor: pointer;
+}
+
+.i-button>button:hover {
+    background-color: #b278e7;
+    color: rgb(255, 255, 255);
+}
+
 .i-right{
     flex: 1;
+    position: relative;
 }
 
 .i-img{
     width: 100%;
-    height:100%
+    height:100%;
+    object-fit:contain;
+    position: absolute;
+
     
+}
+
+.i-bg {
+    clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
+    width:100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: blueviolet;
 }
