--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -51,11 +51,15 @@ input{
     border-bottom: 1px solid grey;
     margin:10px 0px;
     font-size:14px;
+    padding-left: 5px;
+    color: black;
 }
 textarea{
     width: 100%;
     margin: 20px 0px;
     font-size: 14px;
+    padding-left: 5px;
+    color: black;
 }
 
 button{
@@ -70,7 +74,6 @@ button{
     
 }
 button:hover { 
-    background-color: white;
-    color: #8a2be2;
-    border: 1px solid #8a2be2;
+    background-color: #b278e7;
+    color: rgb(255, 255, 255);
 }
