--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -58,7 +58,7 @@
 }
 
 .i-button {
-    margin-top: 30px;
+    margin-top: 40px;
 }
 
 .i-button>button{
@@ -68,6 +68,7 @@
     background-color: #8a2be2;
     color: white;
     cursor: pointer;
+    font-size: 16px;
 }
 
 .i-button>button:hover {
