--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -61,7 +61,7 @@
     margin-top: 40px;
 }
 
-.i-button>button{
+.i-button>a{
     padding: 20px 40px;
     border-radius: 10px;
     border: none;
@@ -69,9 +69,10 @@
     color: white;
     cursor: pointer;
     font-size: 16px;
+    text-decoration: none;
 }
 
-.i-button>button:hover {
+.i-button>a:hover {
     background-color: #b278e7;
     color: rgb(255, 255, 255);
 }
