--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -94,3 +94,69 @@
 .a-sub{
     line-height: 25px;
 }
+
+@media screen and (max-width:480px) {
+    .a{
+        flex-direction: column;
+        align-items: center;
+        margin-top: 40px;
+        height: 100%;
+    }
+        
+    .a-card{
+        height:40vh;
+        width:80%;
+        border-radius: 30px;
+       
+    }
+
+    .a-card.bg{
+       display: none;
+    }
+    .a-img{
+        width:100%;
+        height:100%;
+        object-fit: cover;
+    }
+
+    .a-right{
+
+        align-items: center;
+        padding-left: 50px;
+    }
+
+    .a-right-wrapper{
+        margin-right: 50px;
+    
+    }
+
+    .a-award{
+        flex-direction: column;
+    }
+
+    .a-award-img{
+        margin-bottom: 50px;
+    }
+
+
+    
+    .a-award-text{
+        width: 100%;
+    }
+
+    .a-award-title{
+        font-weight: 300px;
+        color: #333;
+        margin-bottom: 10px;
+    }
+    .a-desc{
+        line-height: 25px;
+    }
+    .a-award-desc{
+        line-height: 25px;
+    }
+    .a-sub{
+        line-height: 25px;
+    }
+
+}
