--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -78,3 +78,73 @@ button:hover {
     background-color: #b278e7;
     color: rgb(255, 255, 255);
 }
+
+@media screen and (max-width: 480px) {
+    .c-wrapper {
+        flex-direction: column;
+        padding: 0px 50px;
+    }
+
+
+    .c{
+        min-height: 1100px;
+        margin-top: 50px;
+    }
+       
+    .c-title{
+        font-size: 40px;
+        width:80%;
+    }
+
+    .c-info-item{
+        margin: 20px 0px;
+    }
+ 
+    .c-right{
+        flex: 1;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    
+    }
+    .c-desc{
+        display: none;
+    }
+    form{
+        margin: 20px 0px 10px 0px;
+    }
+    input{
+        width: 50%;
+        height: 30px;
+        border: none;
+        border-bottom: 1px solid grey;
+        margin:10px 0px;
+        font-size:14px;
+        padding-left: 5px;
+        color: black;
+    }
+    textarea{
+        width: 100%;
+        margin: 20px 0px;
+        font-size: 14px;
+        padding-left: 5px;
+        color: black;
+    }
+    
+    button{
+        background-color: #8a2be2;
+        font-size: 14px;
+        font-weight: 500;
+        color: white;
+        padding: 10px 50px;
+        cursor: pointer;
+        border: none;
+        border-radius: 2px;
+        
+    }
+    button:hover { 
+        background-color: #b278e7;
+        color: rgb(255, 255, 255);
+    }
+    
+}
