--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -28,3 +28,10 @@
 .p:hover .p-img {
     transform: translateY(-100%);
 }
+
+@media screen and (max-width:480px){
+    .p{
+        width: 100%;
+        height: 30vh;
+    }
+}
