--- a/src/components/projectList/projectList.css
+++ b/src/components/projectList/projectList.css
@@ -22,3 +22,21 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
+@media screen and (max-width:480px) {
+    .pl {
+        padding: 10px;
+        margin-top: 50px;
+    }
+    .pl-text {
+        width: 100%;
+    }
+
+    .pl-desc{
+        padding: 0px 50px;
+    }
+
+    .pl-title{
+        padding: 0px 50px;
+    }
+    
+}
