Update to portfolio

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -111,7 +111,7 @@ button:hover {
         display: none;
     }
     form{
-        margin: 20px 0px 10px 0px;
+        margin: 0px;
     }
     input{
         width: 50%;
