--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -42,6 +42,13 @@
     font-weight: 300;
     line-height: 30px;
 }
+
+.c-img{
+    width: 20px;
+    height: 20px;
+    margin-right: 20px;
+}
+
 form{
     margin: 20px 0px 50px 0px;
 }
@@ -115,7 +122,7 @@ button:hover {
     }
     input{
         width: 100%;
-        height: 20px;
+        height: 30px;
         border: none;
         border-bottom: 1px solid grey;
         margin:10px 0px;
